<resources>
    <string name="app_name">玩Android</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="base_page_error">加载失败</string>
    <string name="base_page_click_retry">点击重新加载</string>
    <string name="base_page_empty">暂无数据</string>
    <string name="base_page_loading">加载中…</string>

    <string name="main_tab_home">首页</string>
    <string name="main_tab_system">体系</string>
    <string name="main_tab_navigator">导航</string>
    <string name="main_tab_project">项目</string>
    <string name="main_tab_personal">我的</string>


    <string name="tag_fresh">新</string>
    <string name="tag_stick">置顶</string>
    <string name="footer_retry">重试</string>
    <string name="search">搜索</string>
    <string name="prompt_search_for_all">搜索关键词以空格形式隔开</string>

</resources>